Made by-link and minor tweaks

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,14 @@
     h1 {
       padding-bottom: 5px;
     }
+
+    .spacer {
+      flex: 1 0 0px;
+    }
+
+    .made-by {
+      opacity: 0.5;
+    }
   }
 
   .content {
