--- a/src/App.scss
+++ b/src/App.scss
@@ -37,8 +37,12 @@
 
     & > * {
       display: block;
-      margin: 0 20px;
+      margin: 0 10px;
       line-height: normal;
+
+      @media (min-width: 601px) {
+        margin: 0 20px;
+      }
     }
 
     .logo {
@@ -48,6 +52,10 @@
 
       svg {
         margin-right: 10px;
+
+        @media (max-width: 600px) {
+          margin: 0;
+        }
       }
       h1 {
         display: inline-block;
@@ -56,15 +64,25 @@
         .pod {
           color: #aef;
         }
+
+        @media (max-width: 600px) {
+          display: none;
+        }
       }
     }
 
     .spacer {
       flex: 1 0 0px;
+      margin: 0;
     }
 
     .made-by {
       opacity: 0.5;
+      text-align: center;
+      font-size: 12px;
+      a {
+        white-space: nowrap;
+      }
     }
   }
 
@@ -73,21 +91,31 @@
     height: calc(100vh - 110px);
     margin-bottom: 50px;
     width: 100%;
+    flex-wrap: wrap;
+    overflow: auto;
+
+    @media (min-width: 960px) {
+      overflow: visible;
+    }
 
     & > * {
       overflow: auto;
-      padding-bottom: 120px !important;
+      @media (min-width: 960px) {
+        padding-bottom: 120px !important;
+        height: 100%;
+      }
       transition: none;
     }
 
     .left {
-      flex: 1 0 40%;
+      flex: 1 1 400px;
       background: transparentize($themeColor5, 0.5);
     }
 
     .right {
-      flex: 1 0 60%;
+      flex: 2 1 560px;
       background: transparentize($themeColor10, 0.5);
+      padding-bottom: 120px;
     }
   }
 }
