--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -29,10 +29,12 @@
     z-index: 10;
     max-height: calc(100vh - 60px - 120px);
     overflow: auto;
-    max-width: 800px;
-    width: 40%;
+    max-width: 100vw;
+    width: 450px;
+    min-width: 40vw;
     border-bottom: 1px solid $themeColor;
     box-shadow: 0 10px 10px rgba(0, 0, 20, 0.2);
+    background: $themeColor;
 
     .feed {
       background: $themeColor10;
