Replace featured podcasts with popular from Listen Notes API

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -8,6 +8,10 @@ $themeColor40: desaturate(lighten($themeColor, 40%), 30%);
 $themeColor60: desaturate(lighten($themeColor, 60%), 60%);
 $themeColor80: desaturate(lighten($themeColor, 80%), 80%);
 
+$blueColor1: #046;
+$blueColor2: #09a;
+$blueColor3: #aef;
+
 $accentColor: #80a;
 
 $textColor: #eee;
